Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37888

unexpected type changing after changing AVG to MAX

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 12.0.2
    • 10.11.16, 11.4.10, 11.8.6, 12.2.2
    • Data types
    • mysql> select version();
      +------------------------+
      | version() |
      +------------------------+
      | 12.0.2-MariaDB-ubu2404 |
      +------------------------+
      1 row in set (0.00 sec)
    • Unexpected results
    • Q1/2026 Server Maintenance

    Description

      the AVG function returns decimal type,when union between the decimal type and the date type ,the decimal type and the date type become the blob type.But the decimal type should perfome like the int type becoming string type,and the date type shouldn't change

      mysql> (SELECT MAX(1) as col FROM t1) UNION ALL (SELECT CURDATE() as col);
      +------------+
      | col        |
      +------------+
      | 1          |
      | 2025-10-17 |
      +------------+
      2 rows in set (0.00 sec)
       
      mysql> (SELECT AVG(1) as col FROM t1) UNION ALL (SELECT CURDATE() as col);
      +------------------------+
      | col                    |
      +------------------------+
      | 0x312E3030303030303030 |
      | 0x323032352D31302D3137 |
      +------------------------+
      2 rows in set (0.00 sec)
      

      Attachments

        Activity

          People

            serg Sergei Golubchik
            chen7897 cl hl
            Sergei Golubchik Sergei Golubchik
            Alexander Barkov Alexander Barkov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 0d
                0d
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.75h
                0.75h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.