MDEV-37888 unexpected type changing after changing AVG to MAX

set collation for AVG, like it's done for MAX